--- a/_posts/2024-11-15-2.md
+++ b/_posts/2024-11-15-2.md
@@ -36,7 +36,7 @@ words:
 
 ### 特点
 
-* 将树剖分为至多 $\mathcal O(\log_2n)$ 条链。
+* 将树剖分为至多 $\mathcal O(\log n)$ 条链。
 * 每一条链上的 DFS 序均为连续的。
 
 ### 作用
@@ -56,7 +56,7 @@ words:
 * 轻边：节点连接轻子节点的边。
 * 重链：多条重边两两首尾相连连成的链。
 
-那么树链剖分所剖出来的是什么呢？是 $\mathcal O\left(\log_2n\right)$ 条**重链**。**（注意不是 $\log_2n$，是 $\mathcal O(\log_2 n)$）**
+那么树链剖分所剖出来的是什么呢？是 $\mathcal O\left(\log n\right)$ 条**重链**。
 
 然而，这样势必会有节点“落单”，即不在任何一条重链内。这往往是因为那个节点是叶节点。
 
@@ -78,16 +78,16 @@ words:
 
 对于节点 $x$，我们需要知道：
 
-* $x$ 的子树大小 $size_x$，用于判断重子节点是谁；
-* $x$ 的重子节点 $son_x$，作为剖分的依据；
+* $x$ 的子树大小 $\textit{size}_x$，用于判断重子节点是谁；
+* $x$ 的重子节点 $\textit{son}_x$，作为剖分的依据；
 * $x$ 的父节点 $f_x$ 与 $x$ 的深度 $d_x$，这是几乎所有树上算法都需要的，用处见后文；
-* $x$ 所在链的顶部节点（深度最小的节点）$top_x$，用处见后文；
-* $x$ 在 DFS 序中的排名 $dfn_x$，用处见后文；
-* DFS 序对应的节点编号 $rnk_{dfn_x}=x$，用处见后文；
+* $x$ 所在链的顶部节点（深度最小的节点）$\textit{top}_x$，用处见后文；
+* $x$ 在 DFS 序中的排名 $\textit{dfn}_x$，用处见后文；
+* DFS 序对应的节点编号 $\textit{rnk}_{\textit{dfn}_x}=x$，用处见后文；
 
 ### 第一遍 DFS
 
-求出基本信息 $f_x,d_x,size_x,son_x$。
+求出基本信息 $f_x,d_x,\textit{size}_x,\textit{son}_x$。
 
 这并不难，直接看代码：
 
@@ -113,17 +113,17 @@ namespace hld{
 
 ### 第二遍 DFS
 
-求解 $top_x,dfn_x,rnk_x$。
+求解 $\textit{top}_x,\textit{dfn}_x,\textit{rnk}_x$。
 
 与第一遍 DFS **不同**，这一次 DFS，其主要目的是对树**进行剖分**。
 
-定义 $dfs2(x,topx)$，表示 $x$ 在以 $topx$ 为顶部节点的链上。
+定义 $\textit{dfs}2(x,\textit{topx})$，表示 $x$ 在以 $\textit{topx}$ 为顶部节点的链上。
 
-那么就有 $top_x=topx$。
+那么就有 $\textit{top}_x=\textit{topx}$。
 
-然后弄一个静态变量作为计数器 $cnt$，每次让 $cnt\leftarrow cnt+1,dfn_x\leftarrow cnt,rnk_{cnt}\leftarrow x$ 即可。（$\leftarrow$ 表示赋值）
+然后弄一个静态变量作为计数器 $\textit{cnt}$，每次让 $$\textit{cnt}\leftarrow \textit{cnt}+1,\textit{dfn}_x\leftarrow \textit{cnt},\textit{rnk}_{\textit{cnt} }\leftarrow x$$ 即可。（$\leftarrow$ 表示赋值）
 
-我们需要保证每一条重链上的 DFS 序是**连续**的（原因见下文），因此优先进行 $dfs2(son_x,topx)$。
+我们需要保证每一条重链上的 DFS 序是**连续**的（原因见下文），因此优先进行 $\textit{dfs}2(\textit{son}_x,\textit{topx})$。
 
 ```cpp
 int top[N+1],dfn[N+1]/*,rnk[N+1]*/;//关于rnk为什么注释：参见后文
@@ -212,7 +212,7 @@ int query(int u,int v){
 
 这甚至于比路径上维护还要简单。
 
-因为明显以 $x$ 为根节点的子树内 DFS 序是连续的，就是 $dfn_x\sim dfn_x+size_x-1$，那么我们区间修改即可。
+因为明显以 $x$ 为根节点的子树内 DFS 序是连续的，就是 $\textit{dfn}_x\sim \textit{dfn}_x+\textit{size}_x-1$，那么我们区间修改即可。
 
 子树修改代码：
 
