--- a/_posts/2025-01-03-3.md
+++ b/_posts/2025-01-03-3.md
@@ -73,7 +73,7 @@ $\therefore$ 引理 $1$ 得证。
 
 ![](/img/2025/01/006.svg)
 
-显然，矩形 $X$ 的边长分别为 $\text{Rt}\triangle Y$ 的边长。
+显然，矩形 $X$ 的长、宽分别为 $\text{Rt}\triangle Y$ 的直角边长。
 
 1. 先证**几何意义**下的 $S_Y$：
 
@@ -88,7 +88,7 @@ $\therefore$ 引理 $1$ 得证。
 
 2. 现在求证 **Pick 意义**下的 $S_Y$：
 
-考虑到 $A_Y=\dfrac12A_X+1+C_Y,B_Y=\dfrac12(B_X-C_Y)$，有：
+   考虑到 $A_Y=\dfrac12A_X+1+C_Y,B_Y=\dfrac12(B_X-C_Y)$，有：
 
 $$
 \frac{1}{2}A_Y+B_Y-1=\frac{\frac{1}{2}A_X+1+C_Y}{2}+\left[\frac{1}{2}(B_X-C_Y)\right]-1=\frac{1}{4}A_X+\frac{1}{2}B_X-\frac{1}{2}
