--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -191,15 +191,20 @@ $$
 
 则通过扩展欧几里得算法求出 $x$，即求出了 $a$ 的逆元。
 
+# 逻辑
+
+* $\forall$，任意，`\forall`。
+* $\exist$，存在，`\exist`。
+
 # 集合论
 
 集合其实就是将一些元素打包在一起的代数结构。
 
 ### 符号
 
-* $\{1,2,3,\cdots,n\}$：由 $1,2,3,\cdots,n$ 构成的集合。
+* $\lbrace1,2,3,\cdots,n\rbrace$：由 $1,2,3,\cdots,n$ 构成的集合。
 
-* $\{a\mid P\}$：满足 $P$ 的 $a$。$P$ 为条件，例如：$a\bmod 2=0$、$a\in G$。
+* $\lbrace x\mid P(x)\rbrace$：满足 $P(x)$ 的 $x$。$P(x)$ 为集合中所有元素具有的共同特征，例如：$x\bmod 2=0$、$x\in G$。
 
 * $\vert A\vert$：集合 $A$ 的元素个数。
 
@@ -207,9 +212,13 @@ $$
 
   `\bigcup`。
 
+  也可用 $A\cup B$，`\cup`。
+
 * $A\bigcap B$：$A$ 交 $B$。
 
   `\bigcap`。
+
+  也可用 $A\cap B$，`\cap`。
 
 * $a\in B$：元素 $a$ 属于集合 $B$。
 
@@ -219,11 +228,11 @@ $$
 
   `\notin`。
 
-* $A\subseteq B$：$A$ 是 $B$ 的子集。
+* $A\subseteq B$：$A$ 是 $B$ 的子集，$A$ 包含于 $B$。
 
   `\subseteq`。
 
-* $A\subset B$：$A$ 是 $B$ 的真子集。
+* $A\subsetneq B$：$A$ 是 $B$ 的真子集，$A$ 真包含于 $B$。
 
   `\subset`。
 
@@ -234,6 +243,8 @@ $$
   具体而言，令集合 $U$ 为**全集**，集合 $A$ 为 $U$ 的子集， 则 $U=A\bigcup\overline{A}$。
 
   有：$\vert U\vert=\vert A\vert+\left\vert\overline A\right\vert$。
+
+  也可将 $A$ 的补集记作 $\complement_{U}A$，即 $\complement_UA=\lbrace x\mid x\in U \land x\notin A\rbrace$。
 
   注：本人习惯性使用 $\overline{A}$ 表示。
 
