--- a/_posts/2025-5-17-2.md
+++ b/_posts/2025-5-17-2.md
@@ -23,17 +23,17 @@ words:
 
 注意到 $n\leq18$，因此可以考虑状压 DP。
 
-设 $dp[s]$ 表示射死的猪状态为 $s$ 时的方案数。（$s$ 为方案，是一个小于 $2^n$ 的非负整数，二进制第 $i$ 为表示猪 $i$ 是否被射死。）
+设 $\textit{dp}_s$ 表示射死的猪的集合为 $s$ 时的方案数。（$s$ 放到状压的代码里面就是一个整数，二进制的第 $i$ 位表示猪 $i$ 是否被射死。）
 
 那么考虑抛物线如何射死猪。
 
 对于一条抛物线，如果射死一只猪，则有无穷多条；如果射死两只猪，则可以确定（因为抛物线形如 $y=ax^2+bx$，必须过点 $(0,0)$）。
 
-那么记 $line[i][j]$ 表示射死第 $i,j$ 只猪的**合法的**抛物线射死的猪的状态（猪从 $0$ 至 $n-1$ 编号）。
+那么记 $\textit{line}_{i,j}$ 表示射死第 $i,j$ 只猪的**合法的**抛物线射死的猪的状态（猪从 $0$ 至 $n-1$ 编号）。
 
 记 $(x_i,y_i),(x_j,y_j)$ 分别为猪 $i,j$ 的坐标。
 
-设 $line[i][j]$ 对应抛物线为 $y=ax^2+bx$，则待定系数法解方程可以确定：
+设 $\textit{line}_{i,j}$ 对应抛物线为 $y=ax^2+bx$，则待定系数法解方程可以确定：
 
 $$
 \begin{cases}
@@ -42,11 +42,11 @@ b=\dfrac{y_i}{x_i}-a\cdot x_i
 \end{cases}
 $$
 
-那么就可以确定哪些猪会被 $line[i][j]$ 对应抛物线射死。
+那么就可以确定哪些猪会被 $\textit{line}_{i,j}$ 对应抛物线射死。
 
 需要注意的是：
 
-* 计算 $line[i][j]$ 时需要特判 $i=j$ 时：此时其状态为 $2^i$，即只射死猪 $i$。
+* 计算 $\textit{line}_{i,j}$ 时需要特判 $i=j$ 时：此时其状态 $s$ 只包含 $i$，即只射死猪 $i$。
 * 算出来的二次函数 $y=ax^2+bx$ 需要满足 $a<0$，否则不是**合法抛物线**。
 
 还需要注意的是，`double` 具有**误差**，因此当两个 `double` 只差的绝对值小于一定常数的时候，就应当判断其相等；这个常数一般称作 `eps`，此处取 $10^{-6}$。
@@ -56,8 +56,14 @@ $$
 即：
 
 $$
-dp[s\vert line[i][j]]=\min(dp[s]+1)
+\textit{dp}_{s\cup\textit{line}_{i,j}}\leftarrow\min(\textit{dp}_{s\cup\textit{line}_{i,j}},\textit{dp}_s+1)
 $$
+
+其中，$\leftarrow$ 表示赋值。当然也有代码版的递推方程：
+
+```cpp
+dp[s|line[i][j]]=min(dp[s|line[i][j]],dp[s]+1);
+```
 
 # AC 代码
 
