--- a/_posts/2025-6-2-1.md
+++ b/_posts/2025-6-2-1.md
@@ -21,7 +21,7 @@ words:
 
 显然，第 $x$ 行的操作仅影响第 $x$ 行和第 $m$ 列。
 
-因此考虑用数据结构维护第 $i$ 行的前 $m-1$ 个学生，再维护最后一列。
+因此考虑用 $i$ 个数据结构维护第 $i$ 行的前 $m-1$ 个学生，再用单独的一个维护最后一列。
 
 那么这就是一个序列维护问题，考虑平衡树或权值线段树。
 
