--- a/_posts/2025-01-18-2.md
+++ b/_posts/2025-01-18-2.md
@@ -14,7 +14,7 @@ tags:
   - 线段树
 words:
   - 最长子序列问题
-
+  - 树状数组区间最值
 ---
 
 > [题目传送门](https://www.acwing.com/problem/content/description/3665/)
@@ -23,7 +23,7 @@ words:
 
 给定一个序列，求最大上升子序列和。<span style="color:red;"><b>注意不是最长上升子序列</b></span>。
 
-我们可以很容易得出一个 $\mathcal O(n^2)$ 的做法：枚举 $i\in [1,n]$ 和 $j \in [1,i-1]$，以 $a[i]$ 为末尾的最大上升子序列和 $dp[i]$ 即满足 $a[j]<a[i]$ 的最大的 $dp[j]+1$。
+我们可以很容易得出一个 $\mathcal O(n^2)$ 的做法：枚举 $i\in [1,n]$ 和 $j \in [1,i-1]$，**以 $a_i$ 为末尾**的最大上升子序列和 $\textit{dp}_i$ 即满足 $a_j<a_i$ 的最大的 $\textit{dp}_j+a_i$。
 
 然而 $1\leq n \leq 10^5$，$\mathcal O(n^2)$ 并不足以支持我们通过此题。
 
@@ -31,21 +31,21 @@ words:
 
 ***
 
-能够使 $dp[i]=dp[j]+1$ 成立的 $j$ 需要满足以下条件：
+能够使 $\textit{dp}_i=\textit{dp}_j+a_i$ 成立的 $j$ 需要满足以下条件：
 
 * $j<i$；
-* $a[j]<a[i]$；
-* $dp[j]$ 最大。
+* $a_j<a_i$；
+* $\textit{dp}_j$ 最大。
 
 我们想到使用数据结构来维护其中的某一个（些），使用另一个（些）来查询。
 
-对于 $dp[j]$ 最大，明显想到**区间最值**。
+对于 $\textit{dp}_j$ 最大，明显想到**区间最值**。
 
-对于 $a[j]<a[i]$，想到值域。
+对于 $a_j<a_i$，想到值域。
 
-因此，我们可以**通过权值树状数组来维护区间最值**，每次查询即在 $[1,a[i]-1]$ 内查询最大的 $dp$ 值即可。
+因此，我们可以**通过权值树状数组来维护区间最值**，每次查询即在 $[1,a_i-1]$ 内查询最大的 $\textit{dp}$ 值即可。
 
-具体而言，令 $dp[i]$ 表示以 $a[i]$ 结尾的最长上升子序列的和，权值树状数组 $t$ 维护在值域上由 $a[i]$ 映射而得的 $dp[i]$。
+具体而言，令 $\textit{dp}_i$ 表示以 $a_i$ 结尾的最长上升子序列的和，权值树状数组 $t$ 维护在值域上由 $a_i$ 映射而得的 $\textit{dp}_i$。
 
 **注意需要离散化和 `long long`。**
 
