--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -406,6 +406,43 @@ $$
         唯一的例外是当 $n$ 为奇数时，会存在一个元素没有“配对”元素，但这也不影响，因为那必定是 $\frac12(n+1)$，$a,b$ 的项数相同。
     </p>
 </details>
+<details class="note">
+    <summary>证明</summary>
+    <details class="note">
+        <summary>引理一：$(a+b)^n$ 的每一项的次数和均为 $n$</summary>
+        <p>
+            考虑数学归纳法。
+        </p>
+        <p>
+            $n=0$ 时有 $(a+b)^0=1$，满足次数和为 $1$。
+        </p>
+        <p>
+            假设 $n=k$ 时，引理一成立。
+        </p>
+        <p>
+            则 $(a+b)^{k+1}=(a+b)(a+b)^k=a(a+b)^k+b(a+b)^k$，显然 $a(a+b)^k$ 展开后每一项的次数和均为 $k+1$，$b(a+b)^k$ 同理。
+        </p>
+        <p>
+            故，引理一成立。
+        </p>
+    </details>
+    <p>
+        设 $(a+b)^n=\sum\limits_{i=0}^np_ia^ib^{n-i}$。
+    </p>
+    <p>
+        想到得到 $a^ib^{n-i}$，即从 $n$ 个 $a+b$ 中选出 $i$ 个 $a$，即 $p_i=\dbinom{n}{i}$。
+    </p>
+    <p>
+        故：
+    </p>
+    <p>
+        $$
+        (a+b)^n=\sum_{i=0}^n\binom{n}{i}a^ib^{n-i}
+        $$
+    </p>
+</details>
+
+
 
 ### 二项式推论
 
@@ -498,12 +535,18 @@ $$
 当模数 $p$ 为质数时，有：
 
 $$
-\binom{n}{m}\equiv\binom{\left\lfloor n\div p\right\rfloor}{\left\lfloor m\div p\right\rfloor}\binom{n\bmod p}{m\bmod p}\pmod p
+\binom{n}{m}\equiv
+\begin{pmatrix}
+\left\lfloor \frac np\right\rfloor\\
+\left\lfloor \frac mp\right\rfloor
+\end{pmatrix}
+\binom{n\bmod p}{m\bmod p}\pmod p
 $$
 
-观察上式，$\dbinom{\left\lfloor n\div p\right\rfloor}{\left\lfloor m\div p\right\rfloor}$ 可以继续递归使用 Lucas 定理求解，而 $\dbinom{n\bmod p}{m\bmod p}$ 可以直接求解。
-
-但是这也就导致使用 Lucas 定理时，模数 $p$ 的范围**不能太大**，一般在 $10^5$ 级别，如 $10^5+3$。
+观察上式，$\begin{pmatrix}
+\left\lfloor \frac np\right\rfloor\\
+\left\lfloor \frac mp\right\rfloor
+\end{pmatrix}$ 可以继续递归使用 Lucas 定理求解，而 $\dbinom{n\bmod p}{m\bmod p}$ 可以直接求解。
 
 时间复杂度：$\mathcal O(f(p)+g(n)\log n)$。
 
@@ -520,6 +563,13 @@ $$
         先是时间复杂度 $\mathcal O(p^2)$，更何况空间复杂度也是 $\mathcal O(p^2)$ 的，$10^4$ 之上的级别再预处理直接炸掉。
     </p>
 </details>
+***
+
+所以，也可以预处理模 $p$ 意义下的阶乘，然后使用乘法逆元 $\mathcal O(\log p)$ 计算 $\dbinom{n\bmod p}{m\bmod p}$。
+
+这样的单次时间复杂度为：$\mathcal O(\log n\log p)$。
+
+而预处理的时间复杂度为：$\mathcal O(p)$。
 
 ### 证明
 
@@ -2481,8 +2531,6 @@ $$
 \vert S_1\bigcap S_2\bigcap S_3\bigcap\cdots\bigcap S_n\vert=\vert U\vert-\left\vert\overline{S_1}\bigcup\overline{S_2}\bigcup\overline{S_3}\bigcup\cdots\bigcup\overline{S_n}\right\vert
 $$
 
-对于
-
 ### 错排问题
 
 又称错位排列问题，即对于 $\lbrace1,2,3,\cdots,n\rbrace$ 的排列 $P$，如果满足不存在 $P_i=i$，则称排列 $P$ 是一个**错位排列**。
@@ -2537,3 +2585,24 @@ $$
 $D_0$ 没有意义。
 
 ## 鸽巢原理
+
+### 引入
+
+$6$ 只鸽子在 $5$ 个鸽巢中，请问鸽子**最多**的鸽巢里**最少**有几只鸽子？
+
+很显然，是 $2$ 只，因为可以考虑一种最坏的情况——平均分配。那么分配了 $5$ 只鸽子后，多出来一只无论分配到哪一个鸽巢，都会使该鸽巢有 $2$ 只鸽子。
+
+### 定义
+
+鸽巢原理,亦称抽屉原理。
+
+它常被用于证明存在性证明和求最坏情况下的解。
+
+### 推广
+
+将 $n$ 个物品划分为 $k$ 组，则至少存在一个分组，含有至少 $\left\lceil\dfrac{n}{k}\right\rceil$ 个物品。
+
+证明只需要考虑反证即可。假设不存在一个分组，含有至少 $\left\lceil\dfrac{n}{k}\right\rceil$ 个物品，即所有分组至多有 $\left\lceil\dfrac{n}{k}\right\rceil-1$ 个物品。
+
+则总共最多物品数为 $k\left(\left\lceil\dfrac nk\right\rceil-1\right)=k\left\lceil\dfrac nk\right\rceil-k$。因为 $\left\lceil\dfrac nk\right\rceil<\dfrac nk+1$，所以 $k\left\lceil\dfrac nk\right\rceil-k<n$，即总物品数小于 $n$。然而总物品数为 $n$，因此假设不成立。
+
