--- a/_posts/2025-5-11-1.md
+++ b/_posts/2025-5-11-1.md
@@ -21,19 +21,19 @@ words:
 
 对于这类求“最值的最值”的问题，很容易想到**二分答案**。
 
-因此我们套路地想二分答案是否可行，即能否高效的判断最小赛道长度为 $mid$ 时是否可行。
+因此我们套路地想二分答案是否可行，即能否高效的判断最小赛道长度为 $\textit{mid}$ 时是否可行。
 
-一个显然的贪心：赛道的长度如果大于等于 $mid$，则应尽可能接近于 $mid$。因为修建的太长了对于答案的贡献不变，反而会挤占其他赛道。
+一个显然的贪心：赛道的长度如果大于等于 $\textit{mid}$，则应尽可能接近于 $\textit{mid}$。因为修建的太长了对于答案的贡献不变，反而会挤占其他赛道。
 
-修建赛道，对于一个节点 $x$ 的情况即一条边顺着 $x$ 至其父节点的边向上延伸，其余边两两配对（如果已经大于等于 $mid$，则不需要配对）。
+修建赛道，对于一个节点 $x$ 的情况即一条边顺着 $x$ 至其父节点的边向上延伸，其余边两两配对（如果已经大于等于 $\textit{mid}$，则不需要配对）。
 
-那么我们就应当使得配对尽可能配成刚好大于 $mid$ 的对，剩下的再向上延伸；否则将一个能配对的拆开，向上延伸，最多也只会出现一个合法赛道，而原来可能会有两个；因此这样更优。
+那么我们就应当使得配对尽可能配成刚好大于 $\textit{mid}$ 的对，剩下的再向上延伸；否则将一个能配对的拆开，向上延伸，最多也只会出现一个合法赛道，而原来可能会有两个；因此这样更优。
 
 这个操作可以通过平衡树维护，不想写也可以用 `multiset`。
 
 # AC 代码
 
-时间复杂度：$\mathcal O\left(n\log n\log V\right)$，$V$ 表示答案的值域大小，即 $V=\dfrac{\sum\limits_{i=1}^nl_i}{m}$。
+时间复杂度：$\mathcal O\left(n\log n\log V\right)$，$V$ 表示答案的值域大小，即 $V=\dfrac1m\sum\limits_{i=1}^nl_i$。
 
 ```cpp
 //#include<bits/stdc++.h>
