--- a/_posts/2024-11-27-1.md
+++ b/_posts/2024-11-27-1.md
@@ -20,7 +20,7 @@ words:
 
 ### 定理
 
-若 $p$ 为质数且 $\gcd(a,p)=1$，有 $\large a^{p-1}\equiv1\pmod p$，即 $\large a^p\equiv a\pmod p$。
+若 $p$ 为质数且 $\gcd(a,p)=1$，有 $a^{p-1}\equiv1\pmod p$，即 $a^p\equiv a\pmod p$。
 
 ### 证明
 
@@ -29,7 +29,7 @@ words:
 显然：
 
 $$
-\large \prod\limits_{i=1}^{p-1}i\equiv\prod\limits_{i=1}^{p-1}(i\times a)\pmod p
+\prod\limits_{i=1}^{p-1}i\equiv\prod\limits_{i=1}^{p-1}(i\times a)\pmod p
 $$
 
 令 $\large f=\prod\limits_{i=1}^{p-1}i$，则 $\large f\equiv\prod\limits_{i=1}^{p-1}(i\times a)\pmod p$。
