--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -530,95 +530,111 @@ $$
 
 ## 卢卡斯定理 Lucas 定理
 
-**Lucas 定理用于求解大组合数取质数模的问题。**
+Lucas 定理用于求解大组合数取**质数模**。（对于模数不为质数的情况，请参考[exLucas 定理（扩展卢卡斯）](https://www.luogu.com.cn/problem/P4720)）。
 
-当模数 $p$ 为质数时，有：
+Lucas 定理的内容很简单：
 
 $$
-\binom{n}{m}\equiv
-\begin{pmatrix}
-\left\lfloor \frac np\right\rfloor\\
-\left\lfloor \frac mp\right\rfloor
-\end{pmatrix}
-\binom{n\bmod p}{m\bmod p}\pmod p
+\binom{n}{m}\equiv\binom{\lfloor\frac np\rfloor}{\lfloor\frac mp\rfloor}\binom{n\bmod p}{m\bmod p}\pmod p
 $$
 
-观察上式，$\begin{pmatrix}
-\left\lfloor \frac np\right\rfloor\\
-\left\lfloor \frac mp\right\rfloor
-\end{pmatrix}$ 可以继续递归使用 Lucas 定理求解，而 $\dbinom{n\bmod p}{m\bmod p}$ 可以直接求解。
-
-时间复杂度：$\mathcal O(f(p)+g(n)\log n)$。
-
-其中 $f(p)$ 为（预）处理组合数的复杂度，$g(n)$ 为单次求组合数的复杂度。
-
-递归边界：$m=0$ 时，此时答案显然为 $1$。
-
-<details class="note" open>
-    <summary>关于“（预）处理”</summary>
-    <p>
-        当模数 $p$ 的级别达到 $10^4$ 级时，一般来讲就已经不能预处理了。
-    </p>
-    <p>
-        先是时间复杂度 $\mathcal O(p^2)$，更何况空间复杂度也是 $\mathcal O(p^2)$ 的，$10^4$ 之上的级别再预处理直接炸掉。
-    </p>
-</details>
-***
-
-所以，也可以预处理模 $p$ 意义下的阶乘，然后使用乘法逆元 $\mathcal O(\log p)$ 计算 $\dbinom{n\bmod p}{m\bmod p}$。
-
-这样的单次时间复杂度为：$\mathcal O(\log n\log p)$。
-
-而预处理的时间复杂度为：$\mathcal O(p)$。
+考虑如何证明。
 
 ### 证明
 
 由二项式定理：
 
 $$
-(a+b)^p=\sum_{i=0}^p\binom{p}{i}a^{p-i}b^i
+(a+b)^p=\sum_{i=0}^p\binom pia^ib^{p-i}
 $$
 
-那么我们考虑 $\dbinom{p}{i}$ **在模 $p$ 意义下**的取值（$0\leq i\leq p$）。
+考虑 $\dbinom pi$ 在模 $p$ 意义下的取值。
 
-因为 $\dbinom{p}{i}=\frac{p!}{i!(p-i)!}$，而 $i\leq p$，因此模 $p$ 后只有在 $i=0$ 或 $i=p$ 时可以约分约掉 $p$ 项，计算可得约分之后均为 $1$。
-
-而在其他时候，因为分母中不含 $p$ 项，分子中含 $p$ 项，因此计算逆元相乘后为 $p$ 的倍数，模 $p$ 后为 $0$。
-
-也就是说：
+因为：
 
 $$
-\binom{p}{i}\equiv [i=0 \lor i=p]\pmod p
+\dbinom pi=\dfrac{p!}{i!(p-i)!}
 $$
 
-代入，则有：
+那么如果化简之后，分子 $p!$ 中的 $p$ 项**没有**被约分掉，则有 $\dbinom pi\equiv p\cdot\dfrac{(p-1)!}{i!(p-i)!}\equiv0\pmod p$。
 
+因为 $p$ 为质数，所以 $p$ 项能被约分掉当且仅当 $i!$ 中含有 $p$ 项或 $(p-i)!$ 中含有 $p$ 项。
+
+即：$\dbinom pi\not\equiv0\pmod p$ 当且仅当 $i\equiv0\pmod p$ 或 $p-i\equiv 0\pmod p$。
+
+在二项式定理中，$i$ 满足 $0\leq i\leq p$，所以 $\dbinom pi\not\equiv0$ 当且仅当 $i=0$ 或 $i=p$。
+
+在这两种情况中，都可以计算得到 $\dbinom pi=1$，即 $\dbinom pi\equiv[i=0\lor i=p]$。
+
+重新带回二项式定理，可得：
 $$
-\large
 \begin{aligned}
-(a+b)^p &\equiv \sum_{i=0}^p[i=0 \lor i=p]a^{p-i}b^i\\
-&\equiv a^{p-0}b^0+a^{p-p}b^p\\
+(a+b)^p&\equiv \dbinom{p}{0}a^0b^p+\dbinom ppa^pb^0\\
 &\equiv a^p+b^p
 \end{aligned}
 \pmod p
 $$
 
-考虑二项式 $(1+x)^n\bmod p$，有：
+***
+
+考虑一个二项式 $(1+x)^n\bmod p$。
 
 $$
-\large
 \begin{aligned}
-(1+x)^n&\equiv (1+x)^{p\times \left\lfloor\frac np\right\rfloor}(1+x)^{n\bmod p}\\
-&\equiv (1+x^p)^{\left\lfloor\frac np\right\rfloor}(1+x)^{n\bmod p}\\
+(1+x)^n&\equiv (1+x)^{p\lfloor\frac np\rfloor+n\bmod p}\\
+&\equiv(1+x)^{p\lfloor\frac np\rfloor}(1+x)^{n\bmod p}\\
+&\equiv(1+x^p)^{\lfloor\frac np\rfloor}(1+x)^{n\bmod p}\\
 \end{aligned}
 \pmod p
 $$
 
-我们需要求解的答案 $\dbinom{n}{m}$ 即 $(1+x)^n$ 展开式的 $x^m$ 次项系数，因此 $x^m$ 次项需要从 $\large (1+x^p)^{\left\lfloor\frac np\right\rfloor}$ 中取 $\left\lfloor\frac mp\right\rfloor$ 个 $x^p$，从 $(1+x)^{n\bmod p}$ 中取 $m\bmod p$ 个 $x$ 得到，即：
+由二项式定理，$(1+x)^n$ 的 $x^m$ 项系数为 $\dbinom nm$。
+
+而想要从 $(1+x^p)^{\lfloor\frac np\rfloor}(1+x)^{n\bmod p}$ 中得到 $x^m$，即从 $(1+x^p)^{\lfloor\frac np\rfloor}$ 中选取 $\lfloor\frac mp\rfloor$ 个 $x^p$，再从 $(1+x)^{n\bmod p}$ 中选取 $m\bmod p$ 个 $x$。
+
+即：
 
 $$
-\binom{n}{m}\equiv\binom{\left\lfloor n\div p\right\rfloor}{\left\lfloor m\div p\right\rfloor}\binom{n\bmod p}{m\bmod p}\pmod p
+\dbinom nm\equiv\dbinom{\lfloor\frac np\rfloor}{\lfloor\frac mp\rfloor}\dbinom{n\bmod p}{m\bmod p}
+\pmod p
 $$
+
+***
+
+你可能有一个问题：这看起来明明应当是一个**等式**，但为什么是**同余**呢？
+
+即，Lucas 定理应当表述为：
+$$
+\dbinom nm=\dbinom{\lfloor\frac np\rfloor}{\lfloor\frac mp\rfloor}\dbinom{n\bmod p}{m\bmod p}
+$$
+但是，你要知道，只有在模 $p$ 意义下才有 $(1+x)^{p\lfloor\frac np\rfloor}=(1+x^p)^{\lfloor\frac np\rfloor}$。
+
+因此，只有在模 $p$ 意义下才有：
+
+$$
+\dbinom nm=\dbinom{\lfloor\frac np\rfloor}{\lfloor\frac mp\rfloor}\dbinom{n\bmod p}{m\bmod p}
+$$
+
+即：
+$$
+\dbinom nm\equiv\dbinom{\lfloor\frac np\rfloor}{\lfloor\frac mp\rfloor}\dbinom{n\bmod p}{m\bmod p}\pmod p
+$$
+
+### 应用
+
+当 $n$ 比较大而无法使用其他方法（例如预处理 $1\sim n$ 的阶乘再利用乘法逆元）直接求解组合数时，可以使用 Lucas 定理。
+
+Lucas 定理只需要递归使用即可，即递归计算 $\dbinom{\lfloor\frac np\rfloor}{\lfloor\frac mp\rfloor}$，递归终点即 $\dbinom{0}{0}$。
+
+其时间复杂度为：$\mathcal O\left(f(p)\log m\right)$。
+
+其中，$f(p)$ 表示单次计算 $\dbinom{n\bmod p}{m\bmod p}$ 的复杂度，因写法而异。
+
+可以使用乘法逆元，则时间复杂度为 $\mathcal O(\log p\log m)$。
+
+也可以 $\mathcal O(p\log p)$ 递推，时间复杂度为 $\mathcal O(p\log p\log m)$。
+
+推荐使用乘法逆元。
 
 ### [例题：洛谷PP3807](https://www.luogu.com.cn/problem/P3807)
 
@@ -703,7 +719,7 @@ a_k&\equiv \binom{n}{m}\pmod{p_k^{c_k}}
 \right.
 $$
 
-当我们求出 $a_1,a_2,a_3,\cdots,a_k$ 后，就可以通过[中国剩余定理](/2025/02/05/1/#中国剩余定理)来求出 $\dbinom{n}{m}$。
+当我们求出 $a_1,a_2,a_3,\cdots,a_k$ 后，就可以通过[中国剩余定理](/2025/02/05/1/#crt-中国剩余定理)来求出 $\dbinom{n}{m}$。
 
 ### 2.移除分子分母中的质数
 
