--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -21,7 +21,6 @@ words:
   - 导数运算法则
   - 中国剩余定理 CRT
   - 艾弗森括号Iverson括号Iverson 括号
-
 ---
 
 > [参考资料](/file/2025/02/math.pdf)
@@ -190,6 +189,35 @@ $$
 那么可列方程 $ax+py=1$，显然 $ax\equiv1\pmod p$。
 
 则通过扩展欧几里得算法求出 $x$，即求出了 $a$ 的逆元。
+
+# CRT 中国剩余定理
+
+CRT（中国剩余定理）被用于求解线性同余方程组：
+
+$$
+\begin{cases}
+x\equiv a_1\pmod{p_1}\\
+x\equiv a_2\pmod{p_2}\\
+\cdots\\
+x\equiv a_n\pmod{p_n}
+\end{cases}
+$$
+
+其中，$p_1,p_2,p_3,\cdots,p_n$ **两两互质**。
+
+***
+
+令 $L=\prod\limits_{i=1}^np_i$，则对于 $k\in\N$ 有 $k\cdot L\equiv0\pmod{p_i}$。
+
+记 $q_i=\dfrac{L}{p_i}$，设 $q'_i\equiv q_i^{-1}\pmod{p_i}$，即 $q_i$ 模 $p_i$ 意义下的逆元。
+
+则，方程组的**最小**整数解为：
+
+$$
+x=\left(\sum_{i=1}^na_iq_iq'_i\bmod p_i\right)\bmod L
+$$
+
+同时，对于 $\forall k\in\N^*$，$x+kL$ 均为原方程组的解。
 
 # 逻辑
 
