--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -7,6 +7,7 @@ author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
+  - 题解
   - 数学
   - 未完
 words:
@@ -20,6 +21,11 @@ words:
   - 求导数
   - 导数运算法则
   - 中国剩余定理 CRT
+  - 洛谷P1082洛谷PP1495 
+  - 题解：[NOIP 2012 提高组] 同余方程
+  - 题解：中国剩余定理（CRT）/ 曹冲养猪
+  - 题解：【模板】中国剩余定理（CRT）/ 曹冲养猪
+  - NOIP2012
   - 艾弗森括号Iverson括号Iverson 括号
 ---
 
@@ -154,9 +160,9 @@ $$
 
 ### 扩展欧几里得算法
 
-**注意不是”类欧几里得算法“。**
+**注意不是“类欧几里得算法”。**
 
-用于求关于 $x,y$ 的方程 $ax+by=\gcd(a,b)$ 的**一组整数特解**。
+用于求关于 $x,y$ 的不定方程 $ax+by=\gcd(a,b)$ 的**一组整数特解**。
 
 不妨令 $a>b$。
 
@@ -180,15 +186,141 @@ $$
 
 显然，可以**递归求解**。
 
-那么直到 $b'=a\bmod b=0$ 时，可以直接求解。
+那么直到 $b=0$ 时，可以直接解得一组整数特解 $$\begin{cases}x=1\\y=0\end{cases}$$。
 
-***
+设最终递归出来的解为 $$\begin{cases}x=x_0\\y=y_0\end{cases}$$
+
+同时，对于 $\forall k\in \N^*$，方程存在一组解为 $$\begin{cases}x=x_0+kb\\y=y_0-ka\end{cases}$$。
+
+#### 参考代码
+
+```cpp
+void exgcd(int a,int &x,int b,int &y){
+	if(!b){
+		x=1;
+		y=0;
+		return;
+	}
+	int tmp;
+	exgcd(b,tmp,a%b,x);
+	y=tmp-a/b*x;
+}
+```
+
+#### 乘法逆元
 
 如果需要讨论 $a$ 模 $p$ 意义下的乘法逆元 $a^{-1}$，显然有 $\gcd(a,p)=1$。
 
 那么可列方程 $ax+py=1$，显然 $ax\equiv1\pmod p$。
 
 则通过扩展欧几里得算法求出 $x$，即求出了 $a$ 的逆元。
+
+> [例题链接：[NOIP 2012] 同余方程](https://www.luogu.com.cn/problem/P1082)
+
+求出 $x$ 后，为了使 $x$ 为正整数，只需要让 $x\leftarrow(x\bmod p+p)\bmod p$ 即可。
+
+<details class="success">
+    <summary>参考代码</summary>
+    <div class="language-cpp highlighter-rouge"><div class="highlight"><pre class="highlight"><code><div class="table-responsive"><table class="rouge-table table"><tbody><tr><td class="rouge-gutter gl"><pre class="lineno">1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+31
+32
+33
+34
+35
+36
+37
+38
+39
+40
+41
+42
+43
+44
+45
+46
+47
+48
+</pre></td><td class="rouge-code"><pre><span class="c1">//#include&lt;bits/stdc++.h&gt;</span>
+<span class="cp">#include</span><span class="cpf">&lt;algorithm&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;iostream&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;cstring&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;iomanip&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;cstdio&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;string&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;vector&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;cmath&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;ctime&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;deque&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;queue&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;stack&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;list&gt;</span><span class="cp">
+</span><span class="k">using</span> <span class="k">namespace</span> <span class="n">std</span><span class="p">;</span>
+<span class="kt">void</span> <span class="nf">exgcd</span><span class="p">(</span><span class="kt">int</span> <span class="n">a</span><span class="p">,</span><span class="kt">int</span> <span class="o">&amp;</span><span class="n">x</span><span class="p">,</span><span class="kt">int</span> <span class="n">b</span><span class="p">,</span><span class="kt">int</span> <span class="o">&amp;</span><span class="n">y</span><span class="p">){</span>
+	<span class="k">if</span><span class="p">(</span><span class="o">!</span><span class="n">b</span><span class="p">){</span>
+		<span class="n">x</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span>
+		<span class="n">y</span><span class="o">=</span><span class="mi">0</span><span class="p">;</span>
+		<span class="k">return</span><span class="p">;</span>
+	<span class="p">}</span>
+	<span class="kt">int</span> <span class="n">tmp</span><span class="p">;</span>
+	<span class="n">exgcd</span><span class="p">(</span><span class="n">b</span><span class="p">,</span><span class="n">tmp</span><span class="p">,</span><span class="n">a</span><span class="o">%</span><span class="n">b</span><span class="p">,</span><span class="n">x</span><span class="p">);</span>
+	<span class="n">y</span><span class="o">=</span><span class="n">tmp</span><span class="o">-</span><span class="n">a</span><span class="o">/</span><span class="n">b</span><span class="o">*</span><span class="n">x</span><span class="p">;</span>
+<span class="p">}</span>
+<span class="kt">int</span> <span class="nf">main</span><span class="p">(){</span>
+	<span class="cm">/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/</span>
+
+	<span class="n">ios</span><span class="o">::</span><span class="n">sync_with_stdio</span><span class="p">(</span><span class="nb">false</span><span class="p">);</span>
+	<span class="n">cin</span><span class="p">.</span><span class="n">tie</span><span class="p">(</span><span class="mi">0</span><span class="p">);</span><span class="n">cout</span><span class="p">.</span><span class="n">tie</span><span class="p">(</span><span class="mi">0</span><span class="p">);</span>
+	
+	<span class="kt">int</span> <span class="n">a</span><span class="p">,</span><span class="n">b</span><span class="p">;</span>
+	<span class="n">cin</span><span class="o">&gt;&gt;</span><span class="n">a</span><span class="o">&gt;&gt;</span><span class="n">b</span><span class="p">;</span>
+	<span class="kt">int</span> <span class="n">x0</span><span class="p">,</span><span class="n">y0</span><span class="p">;</span>
+	<span class="n">exgcd</span><span class="p">(</span><span class="n">a</span><span class="p">,</span><span class="n">x0</span><span class="p">,</span><span class="n">b</span><span class="p">,</span><span class="n">y0</span><span class="p">);</span>
+	<span class="n">x0</span><span class="o">%=</span><span class="n">b</span><span class="p">;</span>
+	<span class="k">if</span><span class="p">(</span><span class="n">x0</span><span class="o">&lt;</span><span class="mi">0</span><span class="p">){</span>
+		<span class="n">x0</span><span class="o">+=</span><span class="n">b</span><span class="p">;</span>
+	<span class="p">}</span>
+	<span class="n">cout</span><span class="o">&lt;&lt;</span><span class="n">x0</span><span class="o">&lt;&lt;</span><span class="sc">'\n'</span><span class="p">;</span>
+	
+	<span class="n">cout</span><span class="p">.</span><span class="n">flush</span><span class="p">();</span>
+	 
+	<span class="cm">/*fclose(stdin);
+	fclose(stdout);*/</span>
+	<span class="k">return</span> <span class="mi">0</span><span class="p">;</span>
+<span class="p">}</span>
+</pre></td></tr></tbody></table></div></code></pre></div></div>
+</details>
+
+
 
 # CRT 中国剩余定理
 
@@ -209,15 +341,158 @@ $$
 
 令 $L=\prod\limits_{i=1}^np_i$，则对于 $k\in\N$ 有 $k\cdot L\equiv0\pmod{p_i}$。
 
-记 $q_i=\dfrac{L}{p_i}$，设 $q'_i\equiv q_i^{-1}\pmod{p_i}$，即 $q_i$ 模 $p_i$ 意义下的逆元。
+记 $q_i=\dfrac{L}{p_i}$，设 $c_i\equiv q_i^{-1}\pmod{p_i}$，即 $q_i$ 模 $p_i$ 意义下的逆元。
 
 则，方程组的**最小**整数解为：
 
 $$
-x=\left(\sum_{i=1}^na_iq_iq'_i\bmod p_i\right)\bmod L
+x=\left(\sum_{i=1}^na_iq_ic_i\right)\bmod L
 $$
 
 同时，对于 $\forall k\in\N^*$，$x+kL$ 均为原方程组的解。
+
+## 例题：[中国剩余定理（CRT）/ 曹冲养猪](https://www.luogu.com.cn/problem/P1495)
+
+题目中的 $a_i,b_i$ 即分别为 $p_i,a_i$。
+
+直接套 CRT 即可，但是需要注意的是，计算 $a_iq_ic_i$ 时需要 `__int128`，会爆 `long long`。
+
+<details class="success">
+    <summary>参考代码</summary>
+    <div class="language-cpp highlighter-rouge"><div class="highlight"><pre class="highlight"><code><div class="table-responsive"><table class="rouge-table table"><tbody><tr><td class="rouge-gutter gl"><pre class="lineno">1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+31
+32
+33
+34
+35
+36
+37
+38
+39
+40
+41
+42
+43
+44
+45
+46
+47
+48
+49
+50
+51
+52
+53
+54
+55
+56
+57
+58
+59
+60
+61
+62
+63
+64
+65
+66
+</pre></td><td class="rouge-code"><pre><span class="c1">//#include&lt;bits/stdc++.h&gt;</span>
+<span class="cp">#include</span><span class="cpf">&lt;algorithm&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;iostream&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;cstring&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;iomanip&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;cstdio&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;string&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;vector&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;cmath&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;ctime&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;deque&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;queue&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;stack&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;list&gt;</span><span class="cp">
+</span><span class="k">using</span> <span class="k">namespace</span> <span class="n">std</span><span class="p">;</span>
+<span class="k">typedef</span> <span class="kt">long</span> <span class="kt">long</span> <span class="n">ll</span><span class="p">;</span>
+<span class="k">constexpr</span> <span class="k">const</span> <span class="kt">int</span> <span class="n">N</span><span class="o">=</span><span class="mi">10</span><span class="p">;</span>
+<span class="kt">int</span> <span class="n">n</span><span class="p">,</span><span class="n">a</span><span class="p">[</span><span class="n">N</span><span class="o">+</span><span class="mi">1</span><span class="p">],</span><span class="n">p</span><span class="p">[</span><span class="n">N</span><span class="o">+</span><span class="mi">1</span><span class="p">];</span>
+<span class="kt">void</span> <span class="nf">exgcd</span><span class="p">(</span><span class="n">ll</span> <span class="n">a</span><span class="p">,</span><span class="n">ll</span> <span class="o">&amp;</span><span class="n">x</span><span class="p">,</span><span class="n">ll</span> <span class="n">b</span><span class="p">,</span><span class="n">ll</span> <span class="o">&amp;</span><span class="n">y</span><span class="p">){</span>
+	<span class="k">if</span><span class="p">(</span><span class="o">!</span><span class="n">b</span><span class="p">){</span>
+		<span class="n">x</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span>
+		<span class="n">y</span><span class="o">=</span><span class="mi">0</span><span class="p">;</span>
+		<span class="k">return</span><span class="p">;</span>
+	<span class="p">}</span>
+	<span class="n">ll</span> <span class="n">tmp</span><span class="p">;</span>
+	<span class="n">exgcd</span><span class="p">(</span><span class="n">b</span><span class="p">,</span><span class="n">tmp</span><span class="p">,</span><span class="n">a</span><span class="o">%</span><span class="n">b</span><span class="p">,</span><span class="n">x</span><span class="p">);</span>
+	<span class="n">y</span><span class="o">=</span><span class="n">tmp</span><span class="o">-</span><span class="n">a</span><span class="o">/</span><span class="n">b</span><span class="o">*</span><span class="n">x</span><span class="p">;</span>
+<span class="p">}</span>
+<span class="n">ll</span> <span class="nf">inverse</span><span class="p">(</span><span class="n">ll</span> <span class="n">a</span><span class="p">,</span><span class="n">ll</span> <span class="n">p</span><span class="p">){</span>
+	<span class="n">ll</span> <span class="n">x</span><span class="p">,</span><span class="n">y</span><span class="p">;</span>
+	<span class="n">exgcd</span><span class="p">(</span><span class="n">a</span><span class="p">,</span><span class="n">x</span><span class="p">,</span><span class="n">p</span><span class="p">,</span><span class="n">y</span><span class="p">);</span>
+	<span class="n">x</span><span class="o">%=</span><span class="n">p</span><span class="p">;</span>
+	<span class="k">if</span><span class="p">(</span><span class="n">x</span><span class="o">&lt;</span><span class="mi">0</span><span class="p">){</span>
+		<span class="n">x</span><span class="o">+=</span><span class="n">p</span><span class="p">;</span>
+	<span class="p">}</span>
+	<span class="k">return</span> <span class="n">x</span><span class="p">;</span>
+<span class="p">}</span>
+<span class="kt">int</span> <span class="nf">main</span><span class="p">(){</span>
+	<span class="cm">/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/</span>
+
+	<span class="n">ios</span><span class="o">::</span><span class="n">sync_with_stdio</span><span class="p">(</span><span class="nb">false</span><span class="p">);</span>
+	<span class="n">cin</span><span class="p">.</span><span class="n">tie</span><span class="p">(</span><span class="mi">0</span><span class="p">);</span><span class="n">cout</span><span class="p">.</span><span class="n">tie</span><span class="p">(</span><span class="mi">0</span><span class="p">);</span>
+	
+	<span class="n">cin</span><span class="o">&gt;&gt;</span><span class="n">n</span><span class="p">;</span>
+	<span class="n">ll</span> <span class="n">L</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span> 
+	<span class="k">for</span><span class="p">(</span><span class="kt">int</span> <span class="n">i</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span><span class="n">i</span><span class="o">&lt;=</span><span class="n">n</span><span class="p">;</span><span class="n">i</span><span class="o">++</span><span class="p">){</span>
+		<span class="n">cin</span><span class="o">&gt;&gt;</span><span class="n">p</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">&gt;&gt;</span><span class="n">a</span><span class="p">[</span><span class="n">i</span><span class="p">];</span>
+		<span class="n">L</span><span class="o">*=</span><span class="n">p</span><span class="p">[</span><span class="n">i</span><span class="p">];</span>
+	<span class="p">}</span>
+	<span class="n">ll</span> <span class="n">x</span><span class="o">=</span><span class="mi">0</span><span class="p">;</span>
+	<span class="k">for</span><span class="p">(</span><span class="kt">int</span> <span class="n">i</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span><span class="n">i</span><span class="o">&lt;=</span><span class="n">n</span><span class="p">;</span><span class="n">i</span><span class="o">++</span><span class="p">){</span>
+		<span class="n">ll</span> <span class="n">q</span><span class="o">=</span><span class="n">L</span><span class="o">/</span><span class="n">p</span><span class="p">[</span><span class="n">i</span><span class="p">],</span><span class="n">c</span><span class="o">=</span><span class="n">inverse</span><span class="p">(</span><span class="n">q</span><span class="p">,</span><span class="n">p</span><span class="p">[</span><span class="n">i</span><span class="p">]);</span>
+		<span class="n">x</span><span class="o">=</span><span class="p">(</span><span class="n">x</span><span class="o">+</span><span class="p">(</span><span class="n">__int128</span><span class="p">)</span><span class="mi">1</span><span class="o">*</span><span class="n">a</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">%</span><span class="n">L</span><span class="o">*</span><span class="n">q</span><span class="o">%</span><span class="n">L</span><span class="o">*</span><span class="n">c</span><span class="p">)</span><span class="o">%</span><span class="n">L</span><span class="p">;</span>
+	<span class="p">}</span>
+	<span class="k">if</span><span class="p">(</span><span class="n">x</span><span class="o">&lt;</span><span class="mi">0</span><span class="p">){</span>
+		<span class="n">x</span><span class="o">+=</span><span class="n">L</span><span class="p">;</span>
+	<span class="p">}</span>
+	<span class="n">cout</span><span class="o">&lt;&lt;</span><span class="n">x</span><span class="o">&lt;&lt;</span><span class="sc">'\n'</span><span class="p">;</span>
+	
+	<span class="n">cout</span><span class="p">.</span><span class="n">flush</span><span class="p">();</span>
+	 
+	<span class="cm">/*fclose(stdin);
+	fclose(stdout);*/</span>
+	<span class="k">return</span> <span class="mi">0</span><span class="p">;</span>
+<span class="p">}</span>
+</pre></td></tr></tbody></table></div></code></pre></div></div>
+</details>
 
 # 逻辑
 
